crates/eden-config/tests/cases/fail/invalid_sentry_traces_sample_rate_1/error.snap
---
source: crates/eden-config/tests/cases.rs
expression: diagnostic
input_file: crates/eden-config/tests/cases/fail/invalid_sentry_traces_sample_rate_1
---
error: traces_sample_rate must be within range of 0.0 to 1.0
  ┌─ /eden.toml:4:22
  │
4 │ traces_sample_rate = 1.5
  │                      ^^^
  │
  = Expected a value between 0.0 (no traces) and 1.0 (all traces)
